[gd_scene load_steps=5 format=3 uid="uid://bnr3eth7gf7yc"]

[ext_resource type="Texture2D" uid="uid://7r1d1uu8g2l6" path="res://Resources/Graphics/GeneralUI/menu_background.png" id="1"]
[ext_resource type="Theme" uid="uid://dvwt0gddw54iw" path="res://VNTheme.tres" id="2"]
[ext_resource type="Script" path="res://GeneralUIScripts/StartMenuScreen.gd" id="3"]
[ext_resource type="Material" uid="uid://3tb8733jaxk6" path="res://Resources/AlphaScissor.tres" id="4"]

[node name="MenuScreen" type="TextureRect"]
offset_right = 1200.0
offset_bottom = 675.0
texture = ExtResource("1")
expand_mode = 1
script = ExtResource("3")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 194.0

[node name="Label" type="Label" parent="MarginContainer2"]
material = ExtResource("4")
layout_mode = 2
theme = ExtResource("2")
text = "Abyssal Accessory"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -143.5
offset_right = 743.0
offset_bottom = 692.5
scale = Vector2(0.5, 0.5)
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
text = "New Game"
expand_icon = true

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
text = "Load Game"

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
text = "Delete Save"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
